--- a/iMarket/Base.lproj/Main.storyboard
+++ b/iMarket/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -130,9 +130,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fundo login" translatesAutoresizingMaskIntoConstraints="NO" id="PmC-Lq-lci">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZM6-GL-1VN">
                                 <rect key="frame" x="218" y="228" width="165" height="30"/>
                                 <color key="backgroundColor" red="0.98039215686274506" green="0.92549019607843142" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="165" id="tUk-Od-2Qc"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
@@ -140,7 +146,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n6Z-00-Y3X">
-                                <rect key="frame" x="218" y="304" width="164" height="30"/>
+                                <rect key="frame" x="219" y="342" width="164" height="30"/>
                                 <color key="backgroundColor" red="0.98431372549019602" green="0.91764705882352937" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="164" id="Kfm-Vx-Nsq"/>
@@ -153,7 +159,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YiO-FV-fq8">
-                                <rect key="frame" x="218" y="266" width="164" height="30"/>
+                                <rect key="frame" x="219" y="304" width="164" height="30"/>
                                 <color key="backgroundColor" red="0.98039215686274506" green="0.91764705882352937" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3TK-Om-Hlo"/>
@@ -195,33 +201,32 @@
                                 </items>
                             </navigationBar>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Xb-SR-AN7">
-                                <rect key="frame" x="218" y="342" width="165" height="30"/>
+                                <rect key="frame" x="218" y="266" width="165" height="30"/>
                                 <color key="backgroundColor" red="0.98431372549019602" green="0.91764705882352937" blue="0.88235294117647056" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="165" id="5EC-98-uFe"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="next" secureTextEntry="YES"/>
                                 <connections>
                                     <outlet property="delegate" destination="dlu-Fb-pi2" id="MDc-2E-Fi8"/>
                                 </connections>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fundo login" translatesAutoresizingMaskIntoConstraints="NO" id="PmC-Lq-lci">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8Xb-SR-AN7" firstAttribute="leading" secondItem="n6Z-00-Y3X" secondAttribute="leading" id="4a7-B0-4zS"/>
                             <constraint firstItem="PmC-Lq-lci" firstAttribute="leading" secondItem="bZD-fA-URa" secondAttribute="leadingMargin" constant="-16" id="CQJ-SO-c2n"/>
-                            <constraint firstItem="8Xb-SR-AN7" firstAttribute="top" secondItem="n6Z-00-Y3X" secondAttribute="bottom" constant="8" symbolic="YES" id="D0D-9n-KOT"/>
-                            <constraint firstItem="9vM-Xx-qYS" firstAttribute="top" secondItem="8Xb-SR-AN7" secondAttribute="bottom" constant="228" id="ENS-By-mng"/>
+                            <constraint firstItem="ZM6-GL-1VN" firstAttribute="centerX" secondItem="8Xb-SR-AN7" secondAttribute="centerX" id="IxU-YN-mNu"/>
                             <constraint firstAttribute="centerX" secondItem="n6Z-00-Y3X" secondAttribute="centerX" constant="-0.5" id="K0W-TE-pxT"/>
+                            <constraint firstItem="8Xb-SR-AN7" firstAttribute="centerX" secondItem="YiO-FV-fq8" secondAttribute="centerX" constant="-0.5" id="Nn1-mQ-b7r"/>
                             <constraint firstAttribute="centerX" secondItem="YiO-FV-fq8" secondAttribute="centerX" constant="-0.5" id="Rd7-9M-AoJ"/>
+                            <constraint firstItem="YiO-FV-fq8" firstAttribute="top" secondItem="8Xb-SR-AN7" secondAttribute="bottom" constant="8" id="UBt-ip-dTf"/>
                             <constraint firstItem="n6Z-00-Y3X" firstAttribute="top" secondItem="YiO-FV-fq8" secondAttribute="bottom" constant="8" id="YZN-Vd-rLT"/>
+                            <constraint firstItem="8Xb-SR-AN7" firstAttribute="top" secondItem="ZM6-GL-1VN" secondAttribute="bottom" constant="8" id="YmQ-4F-T22"/>
+                            <constraint firstItem="ZM6-GL-1VN" firstAttribute="top" secondItem="SDj-eB-QiI" secondAttribute="bottom" constant="163" id="alh-iB-v74"/>
                             <constraint firstItem="SDj-eB-QiI" firstAttribute="leading" secondItem="bZD-fA-URa" secondAttribute="leading" id="cNi-nK-k3B"/>
                             <constraint firstItem="SDj-eB-QiI" firstAttribute="centerX" secondItem="ZM6-GL-1VN" secondAttribute="centerX" id="d5p-Dr-edN"/>
-                            <constraint firstItem="8Xb-SR-AN7" firstAttribute="trailing" secondItem="ZM6-GL-1VN" secondAttribute="trailing" id="e9h-Z3-1DF"/>
-                            <constraint firstItem="8Xb-SR-AN7" firstAttribute="leading" secondItem="ZM6-GL-1VN" secondAttribute="leading" id="ed0-gY-Mtk"/>
                             <constraint firstItem="PmC-Lq-lci" firstAttribute="height" secondItem="bZD-fA-URa" secondAttribute="height" id="h9T-Am-Xcn"/>
-                            <constraint firstItem="YiO-FV-fq8" firstAttribute="top" secondItem="ZM6-GL-1VN" secondAttribute="bottom" constant="8" id="j9u-6Q-hz1"/>
                             <constraint firstItem="PmC-Lq-lci" firstAttribute="top" secondItem="VPq-kf-sHN" secondAttribute="bottom" constant="-20" id="mHV-CC-3BG"/>
                             <constraint firstItem="PmC-Lq-lci" firstAttribute="width" secondItem="bZD-fA-URa" secondAttribute="width" id="ou1-gP-sbn"/>
                             <constraint firstAttribute="centerX" secondItem="ZM6-GL-1VN" secondAttribute="centerX" constant="-0.5" id="q6E-2u-9qp"/>
@@ -243,7 +248,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bGQ-A4-IeP" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="JTG-Xp-7ac" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1281" y="-477"/>
+            <point key="canvasLocation" x="1398" y="-292"/>
         </scene>
         <!--My Lists-->
         <scene sceneID="FSQ-Nr-phZ">
@@ -327,7 +332,7 @@
                                     <navigationItem title="Title" id="Zqz-4R-hZa"/>
                                 </items>
                             </navigationBar>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ASJ-hG-HJ9">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ASJ-hG-HJ9">
                                 <rect key="frame" x="16" y="560" width="497" height="30"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.92549019610000005" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -368,7 +373,7 @@
                                     <outlet property="delegate" destination="DRW-eB-wSc" id="fcR-Zv-VgK"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="trS-XH-y2n">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="trS-XH-y2n">
                                 <rect key="frame" x="521" y="560" width="63" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="m4L-S9-EVa"/>
